--- a/CICD/buildspec.yml
+++ b/CICD/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   install:
     run-as: Linux-user-name
     runtime-versions:
-      java: openjdk8
+      java: corretto8
     commands:
       - echo install
   
