--- a/CICD/buildspec.yml
+++ b/CICD/buildspec.yml
@@ -2,9 +2,8 @@ version: 0.2
         
 phases:
   install:
-    run-as: Linux-user-name
     runtime-versions:
-      java: corretto8
+      java: openjdk8
     commands:
       - echo install
   
